--- a/record/pubspec.yaml
+++ b/record/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
   uuid: ^3.0.0
 
   record_platform_interface: ^1.0.1
+  record_web:
+    git:
+      url: https://github.com/ldtrog/record.git
+      path: record_web
+  record_windows: ^1.0.0-beta.2
   record_linux: '>=0.5.0 < 1.0.0'
   record_android: ^1.0.0-beta.2
   record_darwin: ^1.0.0-beta.2
@@ -21,6 +26,10 @@ dependencies:
 # dependency_overrides:
 #   record_platform_interface:
 #     path: ../record_platform_interface
+#   record_web:
+#     path: ../record_web
+#   record_windows:
+#     path: ../record_windows
 #   record_linux:
 #     path: ../record_linux
 #   record_android:
@@ -40,6 +49,10 @@ flutter:
         default_package: record_android
       ios:
         default_package: record_darwin
+      web:
+        default_package: record_web
+      windows:
+        default_package: record_windows
       macos:
         default_package: record_darwin
       linux:
