--- a/record/pubspec.yaml
+++ b/record/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   uuid: ">=3.0.7 <5.0.0"
 
   record_platform_interface: ^1.0.2
-  record_web: ^1.0.0
+#  record_web: ^1.0.0
   record_windows: ^1.0.0
   record_linux: '>=0.5.0 <1.0.0'
   record_android: ^1.0.0
