--- a/record/pubspec.yaml
+++ b/record/pubspec.yaml
@@ -4,7 +4,7 @@ version: 5.0.0-beta.2
 homepage: https://github.com/llfbandit/record/tree/master/record
 
 environment:
-  sdk: ">=2.9.0 <4.0.0"
+  sdk: ">=2.12.0 <4.0.0"
   flutter: ">=2.8.1"
 
 dependencies:
@@ -13,11 +13,12 @@ dependencies:
 
   uuid: ^3.0.0
 
-  record_platform_interface: ^1.0.1
-  record_windows: ^1.0.0-beta.2
-  record_linux: '>=0.5.0 < 1.0.0'
-  record_android: ^1.0.0-beta.2
-  record_darwin: ^1.0.0-beta.2
+  record_platform_interface: ^1.0.2
+  record_web: ^1.0.0
+  record_windows: ^1.0.0
+  record_linux: '>=0.5.0 <1.0.0'
+  record_android: ^1.0.0
+  record_darwin: ^1.0.0
 
 # dependency_overrides:
 #   record_platform_interface:
