--- a/record/example/pubspec.yaml
+++ b/record/example/pubspec.yaml
@@ -7,12 +7,14 @@ version: 1.0.0
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.9.0 <4.0.0"
+  sdk: ^3.3.0
+  flutter: ">=3.16.0"
 
 dependencies:
   path: ^1.8.0
   path_provider: ^2.0.1
-  audioplayers: ^4.1.0
+  audioplayers: ^6.1.0
+  web: ">=0.5.1 <2.0.0"
 
   flutter:
     sdk: flutter
@@ -20,22 +22,8 @@ dependencies:
   record:
     path: ../
 
-# dependency_overrides:
-#   record_platform_interface:
-#     path: ../../record_platform_interface
-#   record_web:
-#     path: ../../record_web
-#   record_windows:
-#     path: ../../record_windows
-#   record_linux:
-#     path: ../../record_linux
-#   record_android:
-#     path: ../../record_android
-#   record_darwin:
-#     path: ../../record_darwin
-
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 
 # The following section is specific to Flutter.
