--- a/record_darwin/pubspec.yaml
+++ b/record_darwin/pubspec.yaml
@@ -1,21 +1,17 @@
 name: record_darwin
 description: iOS and macOS implementations for record package called by record_platform_interface.
-version: 1.0.0-beta.2+1
+version: 1.2.0
 homepage: https://github.com/llfbandit/record/tree/master/record_darwin
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
-  flutter: ">=2.8.1"
+  sdk: ^3.3.0
+  flutter: ">=3.16.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  record_platform_interface: ^1.0.1
-
-# dependency_overrides:
-#   record_platform_interface:
-#     path: ../record_platform_interface
+  record_platform_interface: ^1.2.0
 
 flutter:
   plugin:
