--- a/record_linux/pubspec.yaml
+++ b/record_linux/pubspec.yaml
@@ -1,27 +1,23 @@
 name: record_linux
 description: Linux specific implementation for record package called by record_platform_interface.
-version: 0.6.0
+version: 0.7.2
 homepage: https://github.com/llfbandit/record/tree/master/record_linux
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
-  flutter: ">=2.8.1"
+  sdk: ^3.3.0
+  flutter: ">=3.16.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  record_platform_interface: ^1.0.1
-
-# dependency_overrides:
-#   record_platform_interface:
-#     path: ../record_platform_interface
+  record_platform_interface: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 # The following section is specific to Flutter.
 flutter:
