--- a/record_web/pubspec.yaml
+++ b/record_web/pubspec.yaml
@@ -1,11 +1,11 @@
 name: record_web
 description: Web specific implementation for record package called by record_platform_interface.
-version: 1.0.0-beta.2
+version: 1.1.4
 homepage: https://github.com/llfbandit/record/tree/master/record_web
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
-  flutter: ">=2.8.1"
+  sdk: ^3.3.0
+  flutter: ">=3.16.0"
 
 dependencies:
   flutter:
@@ -14,15 +14,11 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
 
-  js: ^0.6.5
-  record_platform_interface: ^1.0.1
-
-# dependency_overrides:
-#   record_platform_interface:
-#     path: ../record_platform_interface
+  web: ">=0.5.1 <2.0.0"
+  record_platform_interface: ^1.2.0
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   plugin:
@@ -30,6 +26,7 @@ flutter:
       web:
         pluginClass: RecordPluginWeb
         fileName: 'record_web.dart'
-  
+
   assets:
     - assets/js/record.worklet.js
+    - assets/js/record.fixwebmduration.js
