--- a/record_windows/pubspec.yaml
+++ b/record_windows/pubspec.yaml
@@ -1,25 +1,20 @@
 name: record_windows
 description: Windows specific implementation for record package called by record_platform_interface.
-version: 1.0.0-beta.2
+version: 1.0.4
 homepage: https://github.com/llfbandit/record/tree/master/record_windows
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
-  flutter: ">=2.8.1"
+  sdk: ^3.3.0
+  flutter: ">=3.16.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  record_platform_interface: ^1.0.1
-  path: ^1.8.0
-
-# dependency_overrides:
-#   record_platform_interface:
-#     path: ../record_platform_interface
+  record_platform_interface: ^1.2.0
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   plugin:
